# NewGame

./: CMakeLists.txt  readme.md
src/: character.cpp  character.h  controller.cpp  controller.h  game.cpp  game.h  main.cpp  renderer.cpp  renderer.h
